fix line-wrapping in githubcontent code output

--- a/src/App.css
+++ b/src/App.css
@@ -319,6 +319,7 @@ a.news-permalink {
   line-height: 1.846;
   word-break: break-all;
   word-wrap: break-word;
+  white-space: pre-line;
   background-color: #f5f5f5;
   border: 1px solid #cccccc;
   border-radius: 3px;
